2009-11-01 Ian Rutt
 * libglide/glide_thckADI.F90: ADI scheme almost finished
 * libglide/glide_thckCommon.F90: New module to hold parts common to ADI
   and 'normal' SIA.
 * Regtested against e2.a and e2.h	

2009-10-31 Ian Rutt
 * libglide/glide_thckADI.F90: More progress on thickness schemes.
 * Regtested against e2.a and e2.h

2009-10-29 Ian Rutt
 * libglide/glide_thckADI.F90: More refactoring of ADI scheme
 * Regtested against e2.a

2009-10-28 Magnus Hagdorn
 * libglide/glide.F90: initialise temperature code with vertical grid
 * libglide/glide_setup.F90: initialise vertical grid
 * libglide/glide_tempFullSoln.F90: take initialised vertical grid and point
   to it in temperature derived type
 * libglide/glide_types.F90: make vertical grid in glide_general a pointer
   and allocate accordingly
 * glimmer_vertcoord.F90: add routines to initialise vertical coord system
   from file or number of sigma levels
 * Precision changes in glimmer_vertcoord.F90 mean retest assume goods
   must be remade.

2009-10-28 Magnus Hagdorn
 * doc/common/packages.tex: add new package
 * doc/dg/Makefile.am: distribute new file
 * doc/dg/dg.tex: document memory handling scheme
 * doc/dg/memory.f90: example program demonstrating memory handling macros
 * libglimmer/Makefile.am: add new file
 * libglimmer/glimmer_global.F90: define new kind integer for size/len
 * libglimmer/glimmer_log.F90: add subroutines for reporting (de)allocation
   errors
 * libglimmer/glimmer_memory.inc: new set of preprocessor macros for managing
   memory
 * libglimmer/glimmer_vertcoord.F90: add procedures for creating/destroying
   vertCoord_type, use new memory management macros

2009-10-28 Magnus Hagdorn
 * libglide/glide_temp.F90: use standard intrinsic for min rather than dmin1
 * libglide/glide_tempFullSoln.F90: renamed vertCoord_type, moved sigma into
   vertCoord_type and removed sigma and upn from temperature type
 * libglimmer/glimmer_vertcoord.F90: added doxygen strings, added sigma to